@@ -1,11 +1,10 @@
 package server.lintingApi;
 
 import com.sun.net.httpserver.HttpExchange;
-import interpreteur.as.modules.core.ASModule;
-import interpreteur.as.modules.core.ASModuleManager;
 import interpreteur.as.modules.EnumModule;
-import interpreteur.generateurs.lexer.LexerLoader;
+import interpreteur.executeur.Executeur;
 import interpreteur.generateurs.lexer.Regle;
+import language.Language;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import server.BaseApi;
@@ -16,20 +15,18 @@ import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static server.utils.QueryUtils.getValueOfQuery;
+
 public class ASLinterApi extends BaseApi {
-    private final static ArrayList<Regle> REGLES;
-    private final static ASModuleManager MODULE_MANAGER;
-    private final static JSONObject LINTER_INFO;
-    private final static String LINTER_INFO_STRING;
+    private final static Hashtable<Language, JSONObject> LINTER_INFO;
+    private final static Hashtable<Language, String> LINTER_INFO_STRINGIFY;
+    private static ArrayList<Regle> REGLES;
     private static Logger logger;
 
     static {
-        MODULE_MANAGER = new ASModuleManager(null);
-        var tmp = new LexerLoader(null);
-        tmp.load();
-        REGLES = tmp.getReglesAjoutees();
         LINTER_INFO = loadLinterInfo();
-        LINTER_INFO_STRING = LINTER_INFO.toString();
+        LINTER_INFO_STRINGIFY = new Hashtable<>();
+        LINTER_INFO.forEach(((language, jsonObject) -> LINTER_INFO_STRINGIFY.put(language, jsonObject.toString())));
     }
 
     public ASLinterApi(String CORS_ORIGIN) {
@@ -40,28 +37,43 @@ public class ASLinterApi extends BaseApi {
         ASLinterApi.logger = logger;
     }
 
-    public static JSONObject loadLinterInfo() {
+
+    private static JSONObject loadLanguage(Language language) {
+        var executor = new Executeur(language);
+        REGLES = executor.getLexer().getReglesAjoutees();
+        var translator = executor.getTranslator();
+        var fonctionAfficher = translator.translate("modules.builtins.functions.print");
+        var fonctionAttendre = translator.translate("modules.builtins.functions.wait");
+        var fonctionAvancer = translator.translate("modules.builtins.functions.forward");
+        var fonctionReculer = translator.translate("modules.builtins.functions.backward");
+        var fonctionGauche = translator.translate("modules.builtins.functions.left");
+        var fonctionDroite = translator.translate("modules.builtins.functions.right");
+        var fonctionArreter = translator.translate("modules.builtins.functions.stop");
+
         // adds all builtin functions
-        List<String> fonctionsBuiltins = MODULE_MANAGER.getModuleBuiltins().getNomsConstantesEtFonctions();
-        fonctionsBuiltins.remove("afficher");
-        fonctionsBuiltins.remove("attendre");
+        List<String> fonctionsBuiltins = executor.getAsModuleManager().getModuleBuiltins().getNomsConstantesEtFonctions();
+        fonctionsBuiltins.remove(fonctionAfficher);  // remove afficher because it will be with commands
+        fonctionsBuiltins.remove(fonctionAttendre);  // remove attendre because it will be with commands
         fonctionsBuiltins = fonctionsBuiltins
                 .stream()
                 .map(fct -> "\\b" + fct + "\\b")
-                .collect(Collectors.toList());
+                .toList();
 
         // adds all the name of the allowed modules
         List<String> modules = Stream.of(EnumModule.values())
-                .map(Enum::name)
+                .map(module -> translator.translate(module.name()))
                 .collect(Collectors.toList());
         modules.add("\\b\"experimental\"\\b");
 
         List<String> commands = getPatternsOfCategory("commandes");
-        // adds afficher to the commands and the command in the methode_moteur category
-        commands.add("\\bafficher\\b");
-        commands.add("\\battendre\\b");
-        commands.remove("\\bconst\\b");
-        commands.addAll(getPatternsOfCategory("methode_moteur"));
+        // adds afficher, attendre and the function related to the motor to the commands
+        commands.add("\\b" + fonctionAfficher + "\\b");
+        commands.add("\\b" + fonctionAttendre + "\\b");
+        commands.add("\\b" + fonctionAvancer + "\\b");
+        commands.add("\\b" + fonctionReculer + "\\b");
+        commands.add("\\b" + fonctionGauche + "\\b");
+        commands.add("\\b" + fonctionDroite + "\\b");
+        commands.add("\\b" + fonctionArreter + "\\b");
 
         List<String> operators = getPatternsOfCategory("arithmetique");
         operators.addAll(getPatternsOfCategory("assignements"));
@@ -85,9 +97,18 @@ public class ASLinterApi extends BaseApi {
                 .put("fin", getReglePattern("FIN"))
                 .put("fonctions_builtin", fonctionsBuiltins)
                 .put("control_flow", new JSONArray(getPatternsOfCategory("control_flow")))
-                .put("const", "\\bconst\\b")
+                .put("const", getReglePattern("CONSTANTE"))
                 .put("variable", "[a-zA-Z_\\u00a1-\\uffff][a-zA-Z\\d_\\u00a1-\\uffff]*")
                 .put("operators", operators);
+    }
+
+    public static Hashtable<Language, JSONObject> loadLinterInfo() {
+        var linterLanguageDict = new Hashtable<Language, JSONObject>();
+        for (var language : Language.values()) {
+            linterLanguageDict.put(language, loadLanguage(language));
+        }
+
+        return linterLanguageDict;
     }
 
     private static List<String> getPatternsOfCategory(String nomCategorie) {
@@ -106,20 +127,10 @@ public class ASLinterApi extends BaseApi {
         return REGLES.stream().filter(regle -> regle.getNom().equals(regleName)).findFirst().orElseThrow().getPattern();
     }
 
-    private static List<String> getMembersOfModule(String moduleName, boolean includeFunction, boolean includeVariables) {
-        ArrayList<String> members = new ArrayList<>();
-        ASModule module = MODULE_MANAGER.getModule(moduleName);
-        if (includeFunction)
-            members.addAll(module.getNomsFonctions().stream().map(name -> "\\b" + name + "\\b").collect(Collectors.toList()));
-        if (includeVariables)
-            members.addAll(module.getNomsVariables().stream().map(name -> "\\b" + name + "\\b").collect(Collectors.toList()));
-
-        return members;
-    }
-
     @Override
     public void handle(HttpExchange httpExchange) throws IOException {
         super.handle(httpExchange);
+
 
         String requestParamValue;
 
@@ -132,9 +143,17 @@ public class ASLinterApi extends BaseApi {
     }
 
     private String handleGetRequest(HttpExchange httpExchange) {
+        String lang = getValueOfQuery(httpExchange.getRequestURI().getQuery(), "lang");
+        logger.info("Lang is " + lang);
+        if (!Language.isSupportedLanguage(lang)) {
+            logger.warning(
+                    "Language's codeISO639_1 " +
+                    (lang == null ? "unspecified" : "not supported (codeISO639_1: '" + lang + "'). Defaulting to French ('FR')."));
+            lang = "FR";
+        }
         logger.info("Collecting linter info...");
-        logger.info("[SUCCESS] Linter info collected and sent successfuly");
-        return LINTER_INFO_STRING;
+        logger.info("[SUCCESS] Linter info collected and sent successfully");
+        return LINTER_INFO_STRINGIFY.get(Language.valueOf(lang.toUpperCase()));
     }
 }
 
